# MaPS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
resources/shaders/: basic.vs  instancing.vs  signedDistance.fs  signedDistance.vs
src/: main.cpp
src/core/: fileUtilities.cpp  fileUtilities.h  logging.h
src/renderer/: buffers.cpp  buffers.h  renderer.cpp  renderer.h  shader.cpp  shader.h  window.cpp  window.h
src/renderer/camera/: camera.cpp  camera.h  orthographicCamera.cpp  orthographicCamera.h
src/renderer/mesh/: mesh.h
